<resources>
    <string name="app_name">hackerthon</string>



    <!-- 마이 프로필-->
    <string name="profile_title">마이페이지</string>
    <string name="profile_name">이름</string>
    <string name="profile_id">아이디</string>
    <string name="profile_school">학교</string>
    <string name="profile_num">학번</string>
    <string name="profile_lecture">나의 과목들</string>

    <!-- 게시물 추가 -->
    <string name="new_article">새 게시물 작성</string>
    <string name="who">누구를 위한 글인가요?</string>
    <string name="add_confirm">게시물을 작성하시겠습니까?</string>
    <string name="dialog_title">Title</string>

</resources>